--- a/website/views/index.pug
+++ b/website/views/index.pug
@@ -3,86 +3,46 @@ html
     head
         title #{appName}
         link(href="https://fonts.googleapis.com/css?family=Maven+Pro&display=swap" rel="stylesheet")
+        script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js")
+        script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js")
+
         link(rel="stylesheet", type="text/css", href="/css/index.css")
     body
-        div(class="container")
-            div(class="profile")
-                div(class="group")
-                    div(class="hair")
-                    div(class="ear")
-                    div(class="ear right")
-                    div(class="fringe")
-                    div(class="face")
-                    div(class="eye left")
-                    div(class="eye right")
-                    div(class="blush")
-                    div(class="nose")
-                    div(class="mouth")
-                        div(class="tongue")
-                    div(class="neck")
-                    div(class="body")
-                    div(class="tie")
-                        div(class="knot")
-                    div(class="collar left")
-                    div(class="collar right")
-                    div(class="jacket right")
-                    div(class="jacket left")
-                    div(class="jacket-back")
-            svg(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" width="200" height="200" class="dotted-circle")
-                circle(cx="100" cy="100" r="99")
+        div(id="full-nav")
+            nav
+                div(class="nav-buttons")
+                    a about
+                div(class="nav-icon")
+                div(class="nav-buttons righted")
+                    a contact
+            div(id="landing-page")
+                div(class="container")
+                    div(class="profile")
+                        div(class="group")
+                            div(class="hair")
+                            div(class="ear")
+                            div(class="ear right")
+                            div(class="fringe")
+                            div(class="face")
+                            div(class="eye left")
+                            div(class="eye right")
+                            div(class="blush")
+                            div(class="nose")
+                            div(class="mouth")
+                                div(class="tongue")
+                            div(class="neck")
+                            div(class="body")
+                            div(class="tie")
+                                div(class="knot")
+                            div(class="collar left")
+                            div(class="collar right")
+                            div(class="jacket right")
+                            div(class="jacket left")
+                            div(class="jacket-back")
+                    svg(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" width="200" height="200" class="dotted-circle")
+                        circle(cx="100" cy="100" r="99")
+                    div(id="bubble-welcome" class="speech-bubble unselectable") Hello there, and welcome to my curriculum vitae.
+        div(id="content")
+            div(id="content-inner")
 
-    //div(id="planetarium")
-        //    div(id="star-sky")
-        //        div
-        //            div(class="stars")
-        //            div(class="twinkling")
-        //    div(class="effects-container")
-        //        div(id="sun2" class="wrapper")
-        //            div(id="sun" class="inner")
-        //        div(id="moon2" class="wrapper")
-        //            div(id="moon" class="inner")
-        //                div(class="crater")
-        //                div(class="crater")
-        //                div(class="crater")
-        //    div(id="clouds")
-        //        div(class="x1 ccloud")
-        //            div(class="cloud")
-        //        div(class="x2 ccloud")
-        //            div(class="cloud")
-        //        div(class="x3 ccloud")
-        //            div(class="cloud")
-        //        div(class="x4 ccloud")
-        //            div(class="cloud")
-        //        div(class="x5 ccloud")
-        //            div(class="cloud")
-        //        div(class="hill hill-right")
-        //        div(class="hill hill-right2")
-        //        div(class="hill hill-left")
-
-        //section(id="banner")
-        //    //div(class="panel")
-        //    h1 Designing through the night to bring wise ideas to light.
-        //    div(class="effects-container")
-        //        div(class="banner-circle")
-        //            div(id="banner-rotating" class="space-background")
-        //                img(id="rocket" src="../img/rocket.jpg")
-        //
-        //                div(id="moon")
-        //                    div(class="crater")
-        //                    div(class="crater")
-        //                    div(class="crater")
-        //                div(id="sun")
-        //    div(id="cloud-line")
-        //        div(class="cloudy")
-        //        div(class="cloudy")
-        //        div(class="cloudy")
-        //        div(class="cloudy")
-        //        div(class="cloudy")
-        //section(id="about" class="split")
-        //    div(class="description")
-        //        div(class="panel color-scheme-2")
-        //            h1 Hello
-        //    div(class="portrait")
-        //        div(class="panel color-scheme-1")
-        //            h1 This is me hello!
-
+        script(type="text/javascript", src="/js/index.js")
