--- a/website/scss/portrait.scss
+++ b/website/scss/portrait.scss
@@ -5,6 +5,9 @@ $tie: #9a0000;
 $tie-dark: #6e0000;
 $shirt: #f5f5f5;
 
+$icon-background: #E8E9EB;
+$nav-color: #575752;
+
 @mixin border($b) {
   border-radius: $b;
   -webkit-border-radius: $b;
@@ -43,12 +46,6 @@ body {
 }
 
 .container {
-  position: absolute;
-  margin: auto;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
   width: 200px;
   height: 200px;
 
@@ -58,13 +55,12 @@ body {
 }
 
 .profile {
-  //position: relative;
   width: 180px;
   height: 180px;
   @include border(100%);
   border: 2px solid #FFF;
   overflow: hidden;
-  background: #E8E9EB;
+  background: $icon-background;
 }
 
 .group {
@@ -398,7 +394,7 @@ $jacket: #111;
 
 .dotted-circle {
   fill: none;
-  stroke: #575752;
+  stroke: $nav-color;
   stroke-linecap: round;
   stroke-width: 2px;
   stroke-dasharray: 1 6;
@@ -445,3 +441,4 @@ $jacket: #111;
     transform: scale(1.05, 0.8);
   }
 }
+
