--- a/website/scss/portrait.scss
+++ b/website/scss/portrait.scss
@@ -132,6 +132,7 @@ body {
   background: $hair;
   @include border(20px 20px 100px 100px);
   transform: rotate(30deg);
+  animation: fringe-movement 10s linear infinite;
 
   &:before {
     position: absolute;
@@ -153,7 +154,7 @@ body {
   height: 10px;
   background: #424B54;
   @include border(100%);
-  animation: blink-eye 13s linear 4s infinite;
+  animation: blink-eye 13s linear 2s infinite;
 
 
   &:before {
@@ -219,8 +220,6 @@ body {
   border-radius: 0 0 100px 100px;
   background: #424B54;
   overflow: hidden;
-
-  animation: talking 1s linear 0.1s infinite;
 }
 
 .tongue {
@@ -423,22 +422,39 @@ $jacket: #111;
   }
 }
 
-@keyframes talking {
+//@keyframes talking {
+//  0%, 100% {
+//    height: 15px;
+//    top: 120px;
+//    transform: scale(1, 1);
+//  }
+//  20% {
+//    transform: scale(0.8, 1.3);
+//  }
+//  40% {
+//    height: 13px;
+//    transform: scale(1, 1);
+//    top: 123px;
+//  }
+//  70% {
+//    transform: scale(1.05, 0.8);
+//  }
+//}
+
+@keyframes fringe-movement {
   0%, 100% {
-    height: 15px;
-    top: 120px;
-    transform: scale(1, 1);
+    left: 92px;
+    top: 51px;
+    transform: rotate(30deg);
   }
-  20% {
-    transform: scale(0.8, 1.3);
+  30% {
+    left: 90px;
+    top: 50px;
+    transform: rotate(28deg);
   }
-  40% {
-    height: 13px;
-    transform: scale(1, 1);
-    top: 123px;
-  }
-  70% {
-    transform: scale(1.05, 0.8);
+  80% {
+    right: 94px;
+    top: 52px;
+    transform: rotate(32deg);
   }
 }
-
