--- a/website/scss/index.scss
+++ b/website/scss/index.scss
@@ -1,6 +1,20 @@
-@import "responsive", "theme";
+$noise-color: #dedad1;
+$section-body: #f2f2f3;
+$background-color: #d8cdbb;
 
+$color-1: #6ca338;
+$color-2: #f3585b;
+$color-3: #f0ca45;
+$color-4: #4ca5d0;
+$dark: #272425;
 
+@import "responsive", "form", "theme";
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
 h1, h2, h3, h4, h5 {
   margin: 0;
   font-family: 'Open Sans', sans-serif;
@@ -18,8 +32,6 @@ ul {
     //padding: 0;
   }
 }
-
-
 
 
 //$background: #ECECEC;
