--- a/website/scss/responsive.scss
+++ b/website/scss/responsive.scss
@@ -17,7 +17,7 @@
 }
 
 @media (max-width: 768px) {
-  .section-header {
+  .section-header:not(.clip-always-visible) {
 
     &:after {
       visibility: hidden;
@@ -27,11 +27,23 @@
   .section-body > .shadow {
     visibility: hidden;
   }
+
+  #abilities .row-2, #contact .row-2 {
+    width: 100% !important;
+  }
+}
+
+@media (max-width: 600px) {
+  section.central-section .section-body {
+    border-left: 0 !important;
+    border-right: 0 !important;
+    border-radius: 0 !important;
+  }
 }
 
 @media (max-width: 616px) {
   .section-header {
-    text-shadow: 0 0 0 #000 !important;
+    text-shadow: 0 0 0 $dark !important;
 
     h1 {
       font-size: 30px !important;
@@ -44,7 +56,4 @@
     }
   }
 
-  #abilities .row-2 {
-    width: 100% !important;
-  }
 }
