--- a/website/scss/theme.scss
+++ b/website/scss/theme.scss
@@ -1,14 +1,3 @@
-$accent: #3ce63b;
-$noise-color: #dedad1;
-$section-body: #f2f2f3;
-$background-color: #d8cdbb;
-
-$color-1: #6ca338;
-$color-2: #f3585b;
-$color-3: #f0ca45;
-$color-4: #4ca5d0;
-
-
 @mixin apply-skew($skewX, $skewY, $rotate) {
   -webkit-transform: skewX($skewX) skewY($skewY) rotate($rotate);
   -ms-transform: skewX($skewX) skewY($skewY) rotate($rotate);
@@ -34,8 +23,14 @@ body {
   background-color: #272425;
   margin: 0;
   position: relative;
-  padding: 65px 0;
   background-image: url(../img/background.png);
+  padding: 65px 0 0;
+
+  .bottom-page {
+    margin: 165px 0 0;
+    padding: 0 0 65px;
+    background: #484848;
+  }
 }
 
 #home {
@@ -77,8 +72,8 @@ body {
 .content-container {
   padding: 0;
   border-radius: 5px;
-  background-color: $background-color;
-  box-shadow: 0 4px 0 #b39d7a;
+  //background-color: $background-color;
+  //box-shadow: 0 4px 0 #b39d7a;
   margin: 0 auto;
 }
 
@@ -86,6 +81,18 @@ section, header {
   position: relative;
 }
 
+section {
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+
+
+.content-wrap.background {
+  padding-bottom: 1px;
+  margin-bottom: 70px;
+  border-radius: 20px;
+  background-color: $background-color;
+}
 
 section:nth-child(4n) .section-header:before {
   background-color: $color-1;
@@ -103,12 +110,30 @@ section:nth-child(4n + 3) .section-header:before {
   background-color: $color-4;
 }
 
-.section-header {
 
+section.central-section {
+  .section-header {
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
+
+  .section-body {
+    margin: 0 auto 0;
+    border: 20px solid $background-color;
+    border-radius: 20px;
+
+    &.small {
+      max-width: 600px;
+    }
+  }
+}
+
+.section-header {
+  white-space: nowrap;
   z-index: 20;
   position: absolute;
   left: 0;
-  top: 35px;
+  top: -25px;
   padding: 15px 25px 15px 50px;
 
   &.big-header {
@@ -117,13 +142,9 @@ section:nth-child(4n + 3) .section-header:before {
     width: 60%;
     text-transform: uppercase;
     text-shadow: 0 2px 0 #000;
-    color: #272425;
+    color: $dark;
     letter-spacing: -1px;
     min-width: 250px;
-
-    &:before {
-      background-color: $accent;
-    }
 
     > .content {
       width: 100%;
@@ -146,8 +167,7 @@ section:nth-child(4n + 3) .section-header:before {
     border-radius: 0 3px 3px 0;
     position: absolute;
     content: '';
-    background-image: url(../img/noise.png);
-    background-color: $noise-color;
+    background-image: url(../img/noise.png) $noise-color;
     width: 100%;
     height: 100%;
     z-index: 0;
@@ -179,13 +199,12 @@ section:nth-child(4n + 3) .section-header:before {
 
 .section-body {
   z-index: 10;
-  width: 103%;
   position: relative;
   left: 0;
-  top: 75px;
   min-height: 300px;
   padding: 50px 20px;
   margin: 0 0 80px;
+  width: 100%;
 
   &:before {
     background: url(../img/noise.png);
@@ -197,11 +216,19 @@ section:nth-child(4n + 3) .section-header:before {
     z-index: 0;
     top: 0;
     left: 0;
-    @include apply-skew(2deg, 0deg, 2deg);
+    border: 2px dashed $dark;
   }
 
+  // Rotate/skew effect
+  //&:not(.straight) {
+  //  width: 103%;
+  //
+  //  &:before {
+  //    @include apply-skew(1deg, 0deg, 1deg);
+  //  }
+  //}
+
   > .content {
-    width: calc(97% - 40px);
     position: relative;
     z-index: 30;
     padding-top: 30px;
@@ -225,20 +252,24 @@ section:nth-child(4n + 3) .section-header:before {
     position: absolute;
     content: '';
     bottom: 16px;
-    right: 6px;
     top: auto;
-    left: auto;
-    width: 70%;
-    max-width: 500px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: calc(100% - 15px);
     background: transparent;
     @include apply-box-shadow(0, 15px, 9px, rgba(0, 0, 0, 0.4))
   }
 }
 
+//.section-body:not(.straight) > .shadow:before {
+//  @include apply-transform(rotate(2deg) translateX(-50%));
+//  bottom: -5px;
+//}
+
 .section-body > .shadow:before {
-  @include apply-transform(rotate(4deg));
   bottom: 5px;
 }
+
 
 ul.scores {
   li {
@@ -330,6 +361,179 @@ ul.scores {
   }
 }
 
+
+.form-border {
+  border: 2px dotted black;
+  background: url(../img/noise.png) grey;
+  border-radius: 12px;
+  padding: 16px;
+}
+
+/**********
+--- BUTTON BAR
+ **********/
+.button-bar {
+  text-align: center;
+
+  .button {
+    display: inline-block;
+    background-color: $background-color;
+    padding: 5px;
+    border-radius: 12px;
+
+    a {
+      width: 60px;
+      height: 60px;
+      background-color: #6ca338;
+      display: inline-block;
+      border: 2px dashed #000;
+      border-radius: 10px;
+      text-decoration: none;
+      color: black;
+
+      i {
+        font-size: 40px;
+        line-height: 60px;
+      }
+
+      &:hover {
+        cursor: pointer;
+        background-color: #95e13b;
+      }
+    }
+  }
+}
+
+/**********
+--- Preview Cards
+ **********/
+.card-panel {
+  display: flex;
+
+  .panel-button {
+    flex: 0 0 40px;
+    position: relative;
+    margin: 0 5px;
+    background-color: #646B73;
+
+    &.button-left {
+      border-top-left-radius: 12px;
+      border-bottom-left-radius: 12px;
+    }
+
+    &.button-right {
+      border-top-right-radius: 12px;
+      border-bottom-right-radius: 12px;
+    }
+
+    i {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      @include apply-transform(translateX(-50%) translateY(-50%))
+    }
+  }
+
+  .cards {
+    flex: 1 1 auto;
+  }
+}
+
+#projects {
+  .cards {
+    max-width: calc(100% - 90px);
+
+    .row {
+      display: flex;
+      justify-content: center;
+    }
+
+    .hidden {
+      position: absolute;
+      visibility: hidden;
+    }
+
+    .card {
+      background-color: white;
+      height: 270px;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+
+      .image {
+        flex: 1 1 auto;
+        background-color: $dark;
+        overflow: hidden;
+        position: relative;
+
+        img {
+          -o-object-fit: cover;
+          object-fit: cover;
+          min-height: 105%;
+          min-width: 105%;
+          margin: auto;
+          display: block;
+          width: 100%;
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          @include apply-transform(translate(-50%, -50%))
+        }
+      }
+
+      .text {
+        flex: 0 1 100px;
+        margin-top: -14px;
+        z-index: 1;
+
+        h1 {
+          text-transform: none;
+          font-size: 20px;
+          display: inline-block;
+          margin-bottom: 6px;
+          background-color: $color-4;
+          padding: 2px 10px;
+          border-radius: 4px;
+        }
+
+        $font-size: 16px;
+        $line-height: 1.4;
+        $lines-to-show: 3;
+
+        p {
+          margin: -20px 0 0;
+          padding: 20px 8px 4px;
+          display: -webkit-box;
+          //height: $font-size*$line-height*$lines-to-show;
+          font-size: $font-size;
+          line-height: $line-height;
+          -webkit-line-clamp: $lines-to-show;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+      }
+    }
+  }
+}
+
+
+/**********
+--- Color schemes
+ **********/
+
+.section-theme-3 {
+
+  .section-header:before {
+    background-color: $color-2 !important;
+  }
+
+  .section-body:before {
+    background-color: $color-3;
+  }
+}
+
 /**********
 --- ROWS FOR GRID
  **********/
@@ -352,3 +556,12 @@ ul.scores {
 .row-2 {
   width: 50%;
 }
+
+.row-1-3 {
+  width: calc(100% / 3);
+}
+
+.row-flex {
+  flex: 1 1;
+}
+
