--- a/website/scss/index.scss
+++ b/website/scss/index.scss
@@ -1,4 +1,4 @@
-@import "imports/variables", "imports/responsive", "imports/form", "imports/theme";
+@import "imports/variables", "imports/functions", "imports/responsive", "imports/form", "imports/theme";
 
 * {
   -webkit-box-sizing: border-box;
